...
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:ignore="UnusedIds" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UnusedIds">

        <LinearLayout
            android:id="@+id/activity_login"
...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- The imeActionId needs to be an hardcoded int because of roboelectric issue-->

                <EditText
                    android:id="@+id/registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="1410"
                    android:inputType="textPassword"
                    android:maxLines="1" />
...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/registration_password_bis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

...
                    android:imeActionLabel="Register"
                    android:imeOptions="actionDone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:onClick="attemptRegistration"
                android:text="@string/action_register"
                android:textStyle="bold"
                tools:ignore="UnusedIds" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
...
