...
                android:onClick="proceedToLogin"
                android:text="@string/action_login"
                />

            <Button

                android:id="@+id/goto_registration_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:onClick="proceedToRegistration"
                android:text="@string/action_goto_registration" />

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
...
