...
    <string name="error_empty_field">Please fill in all fields</string>
    <string name="error_unmatching_passwords">Entered passwords don\'t match</string>
    <string name="error_registration_unsuccessful">An error occurred when registering, please make
        sure you have access to the network and try again</string>
    <string name="info_registration_successful">Registration was successful, you may log in</string>
    <string name="title_activity_register">Register</string>
    <string name="error_user_already_exists">Account already exists for this username.</string>

    <!-- Strings related to 3D debugging -->
    <string name="debug_camera_rotation" translatable="false">CamRX=%1$.2f CamRY=%2$.2f CamRZ=%3$.2f</string>
    <string name="debug_sensor_rotation" translatable="false">SenRX=%1$.2f SenRY=%2$.2f SenRZ=%3$.2f</string>

    <!-- Strings related to Logout -->
...
